<resources>
    <string name="app_name">কালের কন্ঠ</string>
    <string name="pretex_details">I saw this on the Kalerkontho App and thought you should see it:\n\n</string>

    <string name="action_settings">Settings</string>
    <string name="home">হোম</string>
    <string name="no">না </string>
    <string name="status">অনুরোধ </string>
    <string name="latest_news">সর্বশে  সংবাদ</string>
    <string name="top_news">শীর্ষ সংবাদ</string>
    <string name="most_views_news">সকল সংবাদ</string>
    <string name="first_page"> প্রথম পাতা </string>
    <string name="last_page"> শেষের পাতা </string>
    <string name="special_news"> স্পেশাল নিউজ </string>
    <string name="others_news">ভিন্ন ধরনের খবর </string>
    <string name="bibid"> বিবিধ </string>
    <string name="aro">আরো >></string>
    <string name="month1">জানুয়ারী</string>
    <string name="month2">ফেব্রুয়ারি</string>
    <string name="month3">মার্চ</string>
    <string name="month4">এপ্রিল</string>
    <string name="month5">মে</string>
    <string name="month6">জুন</string>
    <string name="month7">জুলাই</string>
    <string name="month8">অগাস্ট</string>
    <string name="month9">সেপ্টেম্বর</string>
    <string name="month10">অক্টবর</string>
    <string name="month11">নভেম্বর</string>
    <string name="month12">ডিসেম্বর</string>
    <string name="registration">রেজিস্ট্রেশান</string>
    <string name="name">নাম</string>
    <string name="email">ই-মেইল</string>
    <string name="password">পাসওয়ার্ড </string>
    <string name="enter">প্রবেশ করুন</string>
    <string name="login">লগইন</string>
    <string name="login_first">মতামত দিতে লগইন করুন </string>
    <string name="login_first_comment">মন্তব্য দিতে লগইন করুন </string>
    <string name="provide_subject">দয়াকরে বিষয় লিখুন</string>
    <string name="provide_details">দয়াকরে বিস্তারিত লিখুন</string>
    <string name="provide_name">দয়াকরে নাম লিখুন</string>
    <string name="provide_email">দয়াকরে ই-মেইল লিখুন</string>
    <string name="provide_password">দয়াকরে পাসওয়ার্ড লিখুন</string>



    <string name="nijoso">নিজস্ব পছন্দের</string>
    <string name="subjectplus">বিষয় যোগ করে তৈরি কর \nতোমার সংবাদ!</string>
    <string name="seehere">তোমার পছন্দের সর্বশেষ সংবাদগুলো এখানে\nদেখতে পাবে।</string>
    <string name="letsgoo">চলো শুরু করি!!!</string>
    <string name="likesubject">পছন্দের বিষয়</string>
    <string name="subjectselect">বিষয় নির্বাচন</string>

    <string name="notification1">নোটিফিকেশন</string>
    <string name="notification2">ব্রেকিং নিউজ নোটিফিকেশন</string>
    <string name="notification3">কালেরকন্ঠ সরাসরি ব্রেকিং নিউজ পাঠাতে পারবে আপনার ডিভাইসে</string>
    <string name="sound1">সাউন্ড</string>
    <string name="sound2">সাউন্ড নোটিফিকেশন</string>
    <string name="vivration1">ভাইব্রেসন</string>
    <string name="vivration2">ভাইব্রেসন নোটিফিকেশন</string>
    <string name="privacy1">প্রাইভেসি পলিসি</string>
    <string name="tram1">প্রাইভেসি অ্যান্ড ট্রাম </string>
    <string name="tram2">ব্যবহারকারির পলিসি</string>
    <string name="help">সাহায্য</string>
    <string name="motamotyour">আপনার মতামত জানান</string>
    <string name="your_comment">আপনার মন্তব্য জানান</string>
    <string name="subject">বিষয়</string>
    <string name="detailss">বিস্তারিত লিখুন</string>
    <string name="motamot">মতামত</string>
    <string name="comment">মন্তব্য </string>
    <string name="comment_please">মন্তব্য করুন </string>
    <string name="write_comment">মন্তব্য লিখুন ... </string>
    <string name="write_comment_pleas">দয়াকরে মন্তব্য লিখুন</string>
    <string name="comment_succes">আপনার মূল্যবান মন্তব্যের জন্য ধন্যবাদ !!!</string>
    <string name="thanks">আপনার মূল্যবান মতামতের জন্য ধন্যবাদ!!!</string>
    <string name="catlist">ক্যাটাগরি তালিকা</string>




    <string name="follow">ফলো</string>


    <string name="refresh">রিফ্রেশ সাইট</string>
    <string name="setting">সেটিং</string>
    <string name="helps">হেল্প</string>
    <string name="feedback">ফীডব্যাক পাঠাও</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">বিস্তারিত</string>ফেবোরাইট
    <string name="favorite">ফেবোরাইট</string>
</resources>
