<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="2"
       android:layout_marginLeft="15dp"
       android:gravity="center_vertical"
       android:orientation="vertical">
       <TextView
           android:id="@+id/notificationHeadTx"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/kalerkontho_actionbar"
           android:textSize="14sp"
           android:textStyle="bold"
           android:text="@string/notification1"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
           android:orientation="horizontal">
       <TextView
           android:id="@+id/notificationTitle"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="3"
           android:textColor="@color/black"
           android:textSize="13sp"
           android:text="@string/notification2"/>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:orientation="vertical">

               <ToggleButton
                   android:id="@+id/notificationTg"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/check"
                   android:textOn=""
                   android:textOff=""
                   android:focusable="false"
                   android:focusableInTouchMode="false"
                   android:layout_centerVertical="true"/>

           </LinearLayout>

       </LinearLayout>
       <TextView
           android:id="@+id/notificatonAnnounce"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/gray"
           android:textSize="12sp"
           android:paddingTop="10dp"
           android:textStyle="bold"
           android:text="@string/notification3"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/soundHeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kalerkontho_actionbar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/sound1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/soundTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/sound2"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <ToggleButton
                    android:id="@+id/soundTg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check"
                    android:textOn=""
                    android:textOff=""
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_centerVertical="true"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/vivrationHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kalerkontho_actionbar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/vivration1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/vivrationTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/vivration2"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <ToggleButton
                    android:id="@+id/vivrateTg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check"
                    android:textOn=""
                    android:textOff=""
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_centerVertical="true"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/privacyPolicyBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacyHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kalerkontho_actionbar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/privacy1"/>


        <TextView
            android:id="@+id/privacyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:textSize="13sp"
            android:text="@string/privacy1"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/conditionBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tramHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kalerkontho_actionbar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tram1"/>

        <TextView
            android:id="@+id/tramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:textSize="13sp"
            android:text="@string/tram2"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hepBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/helpHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kalerkontho_actionbar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/help"/>

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:textSize="13sp"
            android:text="@string/help"/>

    </LinearLayout>


</LinearLayout>