<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homTop"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgBackComm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dim20"
        android:padding="@dimen/dim10"
        android:src="@drawable/cross_white" />



    <TextView
        android:id="@+id/commentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim40"
        android:text="@string/your_comment"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim30"
        android:layout_marginRight="@dimen/dim30"
        android:layout_marginTop="@dimen/dim50"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/write_comment"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"></View>



    </LinearLayout>

    <TextView
        android:id="@+id/tvCommentSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/descripasasss_03"
        android:gravity="center"
        android:layout_margin="@dimen/dim20"
        android:text="@string/comment"
        android:textSize="18sp"
        android:paddingTop="@dimen/dim10"
        android:paddingRight="@dimen/dim50"
        android:paddingLeft="@dimen/dim50"
        android:paddingBottom="@dimen/dim10"
        android:textColor="@color/homTop" />


    <TextView
        android:id="@+id/commentThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/comment_succes"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>