<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
 >

    <LinearLayout
        android:id="@+id/emptyFv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       >

    <ImageView
        android:id="@+id/selectBtniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/addfavo"/>

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/nijoso"/>

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="@color/homTop"
            android:textSize="16sp"
            android:text="@string/subjectplus"/>


        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textColor="@color/homTop"
            android:textSize="16sp"
            android:text="@string/seehere"/>


        <TextView
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:background="@color/homTop"
            android:textSize="20sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/letsgoo"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recFvoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>


    <ProgressBar
        android:id="@+id/progressNirbachito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>