<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bac"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/dim10">

            <TextView
                android:id="@+id/tvTitel2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/status"
                android:textColor="#000000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvDescription2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/dim10"
                android:text="@string/login_first"
                android:textColor="#000000"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/homTop" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLeftCommund"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/homTop"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:background="@color/homTop" />

                <TextView
                    android:id="@+id/tvRightCommund"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/no"
                    android:textColor="@color/homTop"
                    android:textSize="14sp"
                     />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>